--- a/7/lib/sparky-aptus-appcenter/net-communication.html
+++ b/7/lib/sparky-aptus-appcenter/net-communication.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: November 5, 2024 by pavroo
+Last update: March 2, 2025 by pavroo
 -->
 	<head>
 		<title>Network -> Communication | APTus AppCenter</title>
@@ -44,30 +44,34 @@ Last update: November 5, 2024 by pavroo
 		</td>
 		<td><a href="aptus://netcom_android-messages-desktop" class="button1"><img src="images/anbox.svg" class="appicon"><br />Android Messages</a>
 		</td>
+		<td><a href="aptus://netcom_ayugram" class="button1"><img src="images/telegram.svg" class="appicon"><br />AyuGram</a>
+		</td>
 		<td><a href="aptus://netcom_barnowl" class="button1"><img src="images/irc.svg" class="appicon"><br />Barnowl</a>
 		</td>
 		<td><a href="aptus://netcom_bti" class="button1"><img src="images/twitter.svg" class="appicon"><br />bti</a>
 		</td>
 		<td><a href="aptus://netcom_caprine" class="button1"><img src="images/caprine.svg" class="appicon"><br />Caprine</a>
 		</td>
-		<td><a href="aptus://netcom_deltachat-desktop" class="button1"><img src="images/im.svg" class="appicon"><br />Deltachat Desktop</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_deltachat-desktop" class="button1"><img src="images/im.svg" class="appicon"><br />Deltachat Desktop</a>
+		</td>
 		<td><a href="aptus://netcom_discord" class="button1"><img src="images/discord.svg" class="appicon"><br />Discord</a>
 		</td>
 		<td><a href="aptus://netcom_element-desktop" class="button1"><img src="images/im.svg" class="appicon"><br />Element Desktop</a>
+		</td>
+		<td><a href="aptus://netcom_fagram" class="button1"><img src="images/telegram.svg" class="appicon"><br />FAgram</a>
 		</td>
 		<td><a href="aptus://netcom_finch" class="button1"><img src="images/terminal.svg" class="appicon"><br />Finch</a>
 		</td>
 		<td><a href="aptus://netcom_franz" class="button1"><img src="images/franz.svg" class="appicon"><br />Franz</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netcom_gajim" class="button1"><img src="images/gajim.svg" class="appicon"><br />Gajim</a>
 		</td>
 		<td><a href="aptus://netcom_gomuks" class="button1"><img src="images/terminal.svg" class="appicon"><br />Gomuks</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://netcom_hamsket" class="button1"><img src="images/im.svg" class="appicon"><br />Hamsket</a>
 		</td>
 		<td><a href="aptus://netcom_hexchat" class="button1"><img src="images/hexchat.svg" class="appicon"><br />HexChat</a>
@@ -76,12 +80,12 @@ Last update: November 5, 2024 by pavroo
 		</td>
 		<td><a href="aptus://netcom_irssi" class="button1"><img src="images/irc.svg" class="appicon"><br />Irssi</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netcom_jami" class="button1"><img src="images/jami.svg" class="appicon"><br />Jami</a>
 		</td>
 		<td><a href="aptus://netcom_konversation" class="button1"><img src="images/im.svg" class="appicon"><br />Konversation</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://netcom_kotatogram-desktop" class="button1"><img src="images/telegram.svg" class="appicon"><br />Kotatogram Desktop</a>
 		</td>
 		<td><a href="aptus://netcom_kvirc" class="button1"><img src="images/irc.svg" class="appicon"><br />KVIrc</a>
@@ -90,12 +94,12 @@ Last update: November 5, 2024 by pavroo
 		</td>
 		<td><a href="aptus://netcom_loqui" class="button1"><img src="images/irc.svg" class="appicon"><br />Loqui</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netcom_mumble" class="button1"><img src="images/im.svg" class="appicon"><br />Mumble</a>
 		</td>
 		<td><a href="aptus://netcom_nheko" class="button1"><img src="images/im.svg" class="appicon"><br />Nheko</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://netcom_pidgin" class="button1"><img src="images/im.svg" class="appicon"><br />Pidgin</a>
 		</td>
 		<td><a href="aptus://netcom_psi" class="button1"><img src="images/im.svg" class="appicon"><br />Psi</a>
@@ -104,28 +108,26 @@ Last update: November 5, 2024 by pavroo
 		</td>
 		<td><a href="aptus://netcom_quaternion" class="button1"><img src="images/im.svg" class="appicon"><br />Quaternion</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netcom_rocketchat" class="button1"><img src="images/im.svg" class="appicon"><br />Rocket.Chat</a>
 		</td>
 		<td><a href="aptus://netcom_scrollz" class="button1"><img src="images/irc.svg" class="appicon"><br />ScrollZ</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://netcom_sic" class="button1"><img src="images/irc.svg" class="appicon"><br />sic</a>
 		</td>
 		<td><a href="aptus://netcom_signal-desktop" class="button1"><img src="images/im.svg" class="appicon"><br />Signal Desktop</a>
 		</td>
-		<!--<td><a href="aptus://netcom_skypeforlinux" class="button1"><img src="images/skype.svg" class="appicon"><br />Skype</a>
-		</td>-->
 		<td><a href="aptus://netcom_teams" class="button1"><img src="images/teams-for-linux.svg" class="appicon"><br />Teams</a>
 		</td>
 		<td><a href="aptus://netcom_teams-for-linux" class="button1"><img src="images/teams-for-linux.svg" class="appicon"><br />Teams for Linux</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://webextra_teamspeak" class="button1"><img src="images/im.svg" class="appicon"><br />TeamSpeak Installer</a>
 		</td>
 		<td><a href="aptus://netcom_telegram-desktop" class="button1"><img src="images/telegram.svg" class="appicon"><br />Telegram Desktop</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://netcom_thelounge" class="button1"><img src="images/irc.svg" class="appicon"><br />The Lounge</a>
 		</td>
 		<td><a href="aptus://netcom_tinyirc" class="button1"><img src="images/irc.svg" class="appicon"><br />TinyIRC</a>
@@ -134,12 +136,12 @@ Last update: November 5, 2024 by pavroo
 		</td>
 		<td><a href="aptus://netcom_tokodon" class="button1"><img src="images/im.svg" class="appicon"><br />Tokodon</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netcom_twinkle" class="button1"><img src="images/phone.svg" class="appicon"><br />Twinkle</a>
 		</td>
 		<td><a href="aptus://netcom_weechat" class="button1"><img src="images/im.svg" class="appicon"><br />WeeChat</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://netcom_wasistlos" class="button1"><img src="images/whatsapp.svg" class="appicon"><br />Wasistlos</a>
 		</td>
 	</tr>
