--- a/7/lib/sparky-aptus-appcenter/office-text.html
+++ b/7/lib/sparky-aptus-appcenter/office-text.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: August 10, 2023 by pavroo
+Last update: March 2, 2025 by pavroo
 -->
 	<head>
 		<title>Office -> Text Editors | APTus AppCenter</title>
@@ -68,6 +68,8 @@ Last update: August 10, 2023 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offtex_focuswriter" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />FocusWriter</a>
+		</td>
 		<td><a href="aptus://offtex_fte-xwindow" class="button1"><img src="images/text-editor.svg" class="appicon"><br />FTE Xwindow</a>
 		</td>
 		<td><a href="aptus://offtex_geany" class="button1"><img src="images/geany.svg" class="appicon"><br />Geany</a>
@@ -78,10 +80,10 @@ Last update: August 10, 2023 by pavroo
 		</td>
 		<td><a href="aptus://offtex_jed" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />Jed</a>
 		</td>
-		<td><a href="aptus://offtex_joe" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />Joe</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offtex_joe" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />Joe</a>
+		</td>
 		<td><a href="aptus://offtex_jove" class="button1"><img src="images/terminal.svg" class="appicon"><br />Jove</a>
 		</td>
 		<td><a href="aptus://offtex_juffed" class="button1"><img src="images/text-editor.svg" class="appicon"><br />JuffEd</a>
@@ -92,10 +94,10 @@ Last update: August 10, 2023 by pavroo
 		</td>
 		<td><a href="aptus://offtex_kate" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Kate</a>
 		</td>
-		<td><a href="aptus://offtex_kephra" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Kephra</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offtex_kephra" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Kephra</a>
+		</td>
 		<td><a href="aptus://offtex_kwrite" class="button1"><img src="images/kwrite.svg" class="appicon"><br />KWrite</a>
 		</td>
 		<td><a href="aptus://offtex_le" class="button1"><img src="images/terminal.svg" class="appicon"><br />LE</a>
@@ -106,10 +108,10 @@ Last update: August 10, 2023 by pavroo
 		</td>
 		<td><a href="aptus://offtex_lite-xl" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Lite XL</a>
 		</td>
-		<td><a href="aptus://offtex_micro" class="button1"><img src="images/terminal.svg" class="appicon"><br />Micro</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offtex_micro" class="button1"><img src="images/terminal.svg" class="appicon"><br />Micro</a>
+		</td>
 		<td><a href="aptus://offtex_mousepad" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Mousepad</a>
 		</td>
 		<td><a href="aptus://offtex_nano" class="button1"><img src="images1/nano.svg" class="appicon"><br />Nano</a>
@@ -120,10 +122,10 @@ Last update: August 10, 2023 by pavroo
 		</td>
 		<td><a href="aptus://offtex_notepadnext" class="button1"><img src="images/text-editor.svg" class="appicon"><br />NotepadNext</a>
 		</td>
-		<td><a href="aptus://offtex_notepadqq" class="button1"><img src="images1/notepadqq.svg" class="appicon"><br />NotepadQQ</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offtex_notepadqq" class="button1"><img src="images1/notepadqq.svg" class="appicon"><br />NotepadQQ</a>
+		</td>
 		<td><a href="aptus://offtex_nvi" class="button1"><img src="images/terminal.svg" class="appicon"><br />Nvi</a>
 		</td>
 		<td><a href="aptus://offtex_pluma" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Pluma</a>
@@ -134,10 +136,10 @@ Last update: August 10, 2023 by pavroo
 		</td>
 		<td><a href="aptus://offtex_sed" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />Sed</a>
 		</td>
-		<td><a href="aptus://offtex_tea" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Tea</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offtex_tea" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Tea</a>
+		</td>
 		<td><a href="aptus://offtex_tilde" class="button1"><img src="images/terminal.svg" class="appicon"><br />Tilde</a>
 		</td>
 		<td><a href="aptus://offtex_vim" class="button1"><img src="images/vim.svg" class="appicon"><br />Vim</a>
@@ -148,10 +150,10 @@ Last update: August 10, 2023 by pavroo
 		</td>
 		<td><a href="aptus://offtex_xjed" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Xjed</a>
 		</td>
-		<td><a href="aptus://offtex_zed" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Zed</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offtex_zed" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Zed</a>
+		</td>
 		<td><a href="aptus://offtex_zim" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Zim</a>
 		</td>
 	</tr>
