--- a/8/lib/sparky-aptus-appcenter/accessories-translators.html
+++ b/8/lib/sparky-aptus-appcenter/accessories-translators.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: May 5, 2022 by pavroo
+Last update: March 2, 2025 by pavroo
 -->
 	<head>
 		<title>Accessories -> Translators | APTus AppCenter</title>
@@ -48,14 +48,14 @@ Last update: May 5, 2022 by pavroo
 		</td>
 		<td><a href="aptus://acctra_dictconv" class="button1"><img src="images/preferences-desktop-locale.svg" class="appicon"><br />Dictconv</a>
 		</td>
-		<td><a href="aptus://acctra_gnome-dictionary" class="button1"><img src="images/preferences-desktop-locale.svg" class="appicon"><br />GNOME Dictionary</a>
-		</td>
+		<!--<td><a href="aptus://acctra_gnome-dictionary" class="button1"><img src="images/preferences-desktop-locale.svg" class="appicon"><br />GNOME Dictionary</a>
+		</td>-->
 		<td><a href="aptus://acctra_goldendict" class="button1"><img src="images/preferences-desktop-locale.svg" class="appicon"><br />Golden Dict</a>
+		</td>
+		<td><a href="aptus://acctra_qstardict" class="button1"><img src="images/preferences-desktop-locale.svg" class="appicon"><br />QStarDict</a>
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://acctra_qstardict" class="button1"><img src="images/preferences-desktop-locale.svg" class="appicon"><br />QStarDict</a>
-		</td>
 		<td><a href="aptus://acctra_sdcv" class="button1"><img src="images/terminal.svg" class="appicon"><br />StarDict Console</a>
 		</td>
 	</tr>
