--- a/8/lib/sparky-aptus-appcenter/net-webbrowser.html
+++ b/8/lib/sparky-aptus-appcenter/net-webbrowser.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: December 31, 2024 by pavroo
+Last update: March 2, 2025 by pavroo
 -->
 	<head>
 		<title>Network -> Web Browsers | APTus AppCenter</title>
@@ -134,7 +134,7 @@ Last update: December 31, 2024 by pavroo
 		</td>
 		<td><a href="aptus://netweb_w3m" class="button1"><img src="images/terminal.svg" class="appicon"><br />w3m</a>
 		</td>
-		<td><a href="aptus://netweb_waterfox-kde" class="button1"><img src="images/waterfox.svg" class="appicon"><br />Waterfox</a>
+		<td><a href="aptus://netweb_waterfox" class="button1"><img src="images/waterfox.svg" class="appicon"><br />Waterfox</a>
 		</td>
 		<td><a href="aptus://netweb_zen-browser" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Zen Browser</a>
 		</td>
