--- a/7/lib/sparky-aptus-appcenter/office-text.html
+++ b/7/lib/sparky-aptus-appcenter/office-text.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: March 2, 2025 by pavroo
+Last update: April 6, 2025 by pavroo
 -->
 	<head>
 		<title>Office -> Text Editors | APTus AppCenter</title>
@@ -76,12 +76,14 @@ Last update: March 2, 2025 by pavroo
 		</td>
 		<td><a href="aptus://offtex_gedit" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Gedit</a>
 		</td>
-		<td><a href="aptus://offtex_hiero" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />Hiero</a>
+		<td><a href="aptus://offtex_gnome-text-editor" class="button1"><img src="images/text-editor.svg" class="appicon"><br />GNOME Text Editor</a>
 		</td>
-		<td><a href="aptus://offtex_jed" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />Jed</a>
+		<td><a href="aptus://offtex_hiero" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />Hiero</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offtex_jed" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />Jed</a>
+		</td>
 		<td><a href="aptus://offtex_joe" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />Joe</a>
 		</td>
 		<td><a href="aptus://offtex_jove" class="button1"><img src="images/terminal.svg" class="appicon"><br />Jove</a>
@@ -92,10 +94,10 @@ Last update: March 2, 2025 by pavroo
 		</td>
 		<td><a href="aptus://offtex_kakoune" class="button1"><img src="images/terminal.svg" class="appicon"><br />Kakoune</a>
 		</td>
-		<td><a href="aptus://offtex_kate" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Kate</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offtex_kate" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Kate</a>
+		</td>
 		<td><a href="aptus://offtex_kephra" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Kephra</a>
 		</td>
 		<td><a href="aptus://offtex_kwrite" class="button1"><img src="images/kwrite.svg" class="appicon"><br />KWrite</a>
@@ -106,10 +108,10 @@ Last update: March 2, 2025 by pavroo
 		</td>
 		<td><a href="aptus://offtex_leo" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Leo</a>
 		</td>
-		<td><a href="aptus://offtex_lite-xl" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Lite XL</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offtex_lite-xl" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Lite XL</a>
+		</td>
 		<td><a href="aptus://offtex_micro" class="button1"><img src="images/terminal.svg" class="appicon"><br />Micro</a>
 		</td>
 		<td><a href="aptus://offtex_mousepad" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Mousepad</a>
@@ -120,10 +122,10 @@ Last update: March 2, 2025 by pavroo
 		</td>
 		<td><a href="aptus://offtex_nedit" class="button1"><img src="images/terminal.svg" class="appicon"><br />NEdit</a>
 		</td>
-		<td><a href="aptus://offtex_notepadnext" class="button1"><img src="images/text-editor.svg" class="appicon"><br />NotepadNext</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offtex_notepadnext" class="button1"><img src="images/text-editor.svg" class="appicon"><br />NotepadNext</a>
+		</td>
 		<td><a href="aptus://offtex_notepadqq" class="button1"><img src="images1/notepadqq.svg" class="appicon"><br />NotepadQQ</a>
 		</td>
 		<td><a href="aptus://offtex_nvi" class="button1"><img src="images/terminal.svg" class="appicon"><br />Nvi</a>
@@ -134,10 +136,10 @@ Last update: March 2, 2025 by pavroo
 		</td>
 		<td><a href="aptus://offtex_scite" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Scite</a>
 		</td>
-		<td><a href="aptus://offtex_sed" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />Sed</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offtex_sed" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />Sed</a>
+		</td>
 		<td><a href="aptus://offtex_tea" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Tea</a>
 		</td>
 		<td><a href="aptus://offtex_tilde" class="button1"><img src="images/terminal.svg" class="appicon"><br />Tilde</a>
@@ -148,10 +150,10 @@ Last update: March 2, 2025 by pavroo
 		</td>
 		<td><a href="aptus://offtex_wordgrinder-x11" class="button1"><img src="images/text-editor.svg" class="appicon"><br />WordGrinder x11</a>
 		</td>
-		<td><a href="aptus://offtex_xjed" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Xjed</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offtex_xjed" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Xjed</a>
+		</td>
 		<td><a href="aptus://offtex_zed" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Zed</a>
 		</td>
 		<td><a href="aptus://offtex_zim" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Zim</a>
