--- a/8/lib/sparky-aptus-appcenter/desktops.html
+++ b/8/lib/sparky-aptus-appcenter/desktops.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: April 2, 2024 by pavroo
+Last update: April 6, 2025 by pavroo
 -->
 	<head>
 		<title>Desktops | APTus AppCenter</title>
@@ -50,12 +50,12 @@ Last update: April 2, 2024 by pavroo
 		</td>
 		<td><a href="aptus://environment_cinnamon" class="button1"><img src="images0/cinnamon.png" class="appicon"><br />Cinnamon</a>
 		</td>
-		<td><a href="aptus://environment_draco" class="button1"><img src="images/desktop.svg" class="appicon"><br />Draco</a>
+		<!--<td><a href="aptus://environment_draco" class="button1"><img src="images/desktop.svg" class="appicon"><br />Draco</a>
+		</td>-->
+		<td><a href="aptus://environment_enlightenment" class="button1"><img src="images0/enlightenment.png" class="appicon"><br />Enlightenment</a>
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://environment_enlightenment" class="button1"><img src="images0/enlightenment.png" class="appicon"><br />Enlightenment</a>
-		</td>
 		<td><a href="aptus://environment_fluxbox" class="button1"><img src="images0/fluxbox.png" class="appicon"><br />Fluxbox</a>
 		</td>
 		<td><a href="aptus://environment_gnome-flashback" class="button1"><img src="images0/gnome1.png" class="appicon"><br />GNOME FlashBack</a>
@@ -66,10 +66,10 @@ Last update: April 2, 2024 by pavroo
 		</td>
 		<td><a href="aptus://environment_icewm" class="button1"><img src="images0/icewm.png" class="appicon"><br />IceWM</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://environment_jwm" class="button1"><img src="images0/jwm.png" class="appicon"><br />JWM</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://environment_kde" class="button1"><img src="images0/kde.png" class="appicon"><br />KDE Plasma</a>
 		</td>
 		<td><a href="aptus://environment_lumina" class="button1"><img src="images0/lumina.png" class="appicon"><br />Lumina</a>
@@ -80,10 +80,10 @@ Last update: April 2, 2024 by pavroo
 		</td>
 		<td><a href="aptus://environment_mate" class="button1"><img src="images0/mate.png" class="appicon"><br />MATE</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://environment_mlvwm" class="button1"><img src="images/desktop.svg" class="appicon"><br />MLVWM</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://environment_nscde" class="button1"><img src="images0/nscde.png" class="appicon"><br />NsCDE</a>
 		</td>
 		<td><a href="aptus://environment_openbox" class="button1"><img src="images0/openbox.png" class="appicon"><br />Openbox</a>
@@ -94,10 +94,10 @@ Last update: April 2, 2024 by pavroo
 		</td>
 		<td><a href="aptus://environment_sway" class="button1"><img src="images0/sway.png" class="appicon"><br />Sway</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://environment_sugar" class="button1"><img src="images0/sugar.svg" class="appicon"><br />Sugar</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://environment_trinity" class="button1"><img src="images0/tde.png" class="appicon"><br />Trinity</a>
 		</td>
 		<td><a href="aptus://environment_ukui" class="button1"><img src="images0/ukui.png" class="appicon"><br />UKUI</a>
