--- a/8/lib/sparky-aptus-appcenter/office-text.html
+++ b/8/lib/sparky-aptus-appcenter/office-text.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: March 2, 2025 by pavroo
+Last update: April 6, 2025 by pavroo
 -->
 	<head>
 		<title>Office -> Text Editors | APTus AppCenter</title>
@@ -72,16 +72,18 @@ Last update: March 2, 2025 by pavroo
 		</td>
 		<td><a href="aptus://offtex_gedit" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Gedit</a>
 		</td>
+		<td><a href="aptus://offtex_gnome-text-editor" class="button1"><img src="images/text-editor.svg" class="appicon"><br />GNOME Text Editor</a>
+		</td>
 		<td><a href="aptus://offtex_jed" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />Jed</a>
 		</td>
 		<td><a href="aptus://offtex_joe" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />Joe</a>
 		</td>
 		<td><a href="aptus://offtex_jove" class="button1"><img src="images/terminal.svg" class="appicon"><br />Jove</a>
 		</td>
-		<td><a href="aptus://offtex_juffed" class="button1"><img src="images/text-editor.svg" class="appicon"><br />JuffEd</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offtex_juffed" class="button1"><img src="images/text-editor.svg" class="appicon"><br />JuffEd</a>
+		</td>
 		<td><a href="aptus://offtex_jupp" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />Jupp</a>
 		</td>
 		<td><a href="aptus://offtex_kakoune" class="button1"><img src="images/terminal.svg" class="appicon"><br />Kakoune</a>
@@ -92,10 +94,10 @@ Last update: March 2, 2025 by pavroo
 		</td>
 		<td><a href="aptus://offtex_kwrite" class="button1"><img src="images/kwrite.svg" class="appicon"><br />KWrite</a>
 		</td>
-		<td><a href="aptus://offtex_le" class="button1"><img src="images/terminal.svg" class="appicon"><br />LE</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offtex_le" class="button1"><img src="images/terminal.svg" class="appicon"><br />LE</a>
+		</td>
 		<td><a href="aptus://offtex_l3afpad" class="button1"><img src="images/text-editor.svg" class="appicon"><br />L3afpad</a>
 		</td>
 		<td><a href="aptus://offtex_leo" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Leo</a>
@@ -106,10 +108,10 @@ Last update: March 2, 2025 by pavroo
 		</td>
 		<td><a href="aptus://offtex_mousepad" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Mousepad</a>
 		</td>
-		<td><a href="aptus://offtex_nano" class="button1"><img src="images1/nano.svg" class="appicon"><br />Nano</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offtex_nano" class="button1"><img src="images1/nano.svg" class="appicon"><br />Nano</a>
+		</td>
 		<td><a href="aptus://offtex_ne" class="button1"><img src="images/terminal.svg" class="appicon"><br />ne</a>
 		</td>
 		<td><a href="aptus://offtex_nedit" class="button1"><img src="images/terminal.svg" class="appicon"><br />NEdit</a>
@@ -120,10 +122,10 @@ Last update: March 2, 2025 by pavroo
 		</td>
 		<td><a href="aptus://offtex_nvi" class="button1"><img src="images/terminal.svg" class="appicon"><br />Nvi</a>
 		</td>
-		<td><a href="aptus://offtex_pluma" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Pluma</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offtex_pluma" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Pluma</a>
+		</td>
 		<td><a href="aptus://offtex_pulsar" class="button1"><img src="images/atom.svg" class="appicon"><br />Pulsar</a>
 		</td>
 		<td><a href="aptus://offtex_scite" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Scite</a>
@@ -134,10 +136,10 @@ Last update: March 2, 2025 by pavroo
 		</td>
 		<td><a href="aptus://offtex_vim" class="button1"><img src="images/vim.svg" class="appicon"><br />Vim</a>
 		</td>
-		<td><a href="aptus://offtex_vis" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />Vis</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offtex_vis" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />Vis</a>
+		</td>
 		<td><a href="aptus://offtex_wordgrinder-x11" class="button1"><img src="images/text-editor.svg" class="appicon"><br />WordGrinder x11</a>
 		</td>
 		<td><a href="aptus://offtex_xjed" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Xjed</a>
