--- a/8/lib/sparky-aptus-appcenter/net-vpn.html
+++ b/8/lib/sparky-aptus-appcenter/net-vpn.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: November 5, 2024 by pavroo
+Last update: May 4, 2025 by pavroo
 -->
 	<head>
 		<title>Network -> VPN | APTus AppCenter</title>
@@ -56,7 +56,7 @@ Last update: November 5, 2024 by pavroo
 	<tr>
 		<td><a href="aptus://netprv_openvpn" class="button1"><img src="images/preferences-system-network-vpn.svg" class="appicon"><br />OpenVPN</a>
 		</td>
-		<td><a href="aptus://netprv_protonvpn" class="button1"><img src="images/preferences-system-privacy.svg" class="appicon"><br />ProtonVPN</a>
+		<td><a href="aptus://netprv_protonvpn" class="button1"><img src="images/preferences-system-privacy.svg" class="appicon"><br />Proton VPN GNOME Desktop</a>
 		</td>
 		<td><a href="aptus://netprv_quicktun" class="button1"><img src="images/preferences-system-network-vpn.svg" class="appicon"><br />Quicktun</a>
 		</td>
