--- a/7/lib/sparky-aptus-appcenter/net-communication.html
+++ b/7/lib/sparky-aptus-appcenter/net-communication.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: April 6, 2025 by pavroo
+Last update: May 4, 2025 by pavroo
 -->
 	<head>
 		<title>Network -> Communication | APTus AppCenter</title>
@@ -58,16 +58,18 @@ Last update: April 6, 2025 by pavroo
 		</td>
 		<td><a href="aptus://netcom_discord" class="button1"><img src="images/discord.svg" class="appicon"><br />Discord</a>
 		</td>
+		<td><a href="aptus://netcom_elecwhat" class="button1"><img src="images/whatsapp.svg" class="appicon"><br />ElecWhat</a>
+		</td>
 		<td><a href="aptus://netcom_element-desktop" class="button1"><img src="images/im.svg" class="appicon"><br />Element Desktop</a>
 		</td>
 		<td><a href="aptus://netcom_fagram" class="button1"><img src="images/telegram.svg" class="appicon"><br />FAgram</a>
 		</td>
 		<td><a href="aptus://netcom_finch" class="button1"><img src="images/terminal.svg" class="appicon"><br />Finch</a>
 		</td>
-		<td><a href="aptus://netcom_franz" class="button1"><img src="images/franz.svg" class="appicon"><br />Franz</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_franz" class="button1"><img src="images/franz.svg" class="appicon"><br />Franz</a>
+		</td>
 		<td><a href="aptus://netcom_gajim" class="button1"><img src="images/gajim.svg" class="appicon"><br />Gajim</a>
 		</td>
 		<td><a href="aptus://netcom_gomuks" class="button1"><img src="images/terminal.svg" class="appicon"><br />Gomuks</a>
@@ -78,10 +80,10 @@ Last update: April 6, 2025 by pavroo
 		</td>
 		<td><a href="aptus://netcom_ircii" class="button1"><img src="images/irc.svg" class="appicon"><br />ircII</a>
 		</td>
-		<td><a href="aptus://netcom_irssi" class="button1"><img src="images/irc.svg" class="appicon"><br />Irssi</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_irssi" class="button1"><img src="images/irc.svg" class="appicon"><br />Irssi</a>
+		</td>
 		<td><a href="aptus://netcom_jami" class="button1"><img src="images/jami.svg" class="appicon"><br />Jami</a>
 		</td>
 		<td><a href="aptus://netcom_konversation" class="button1"><img src="images/im.svg" class="appicon"><br />Konversation</a>
@@ -92,10 +94,10 @@ Last update: April 6, 2025 by pavroo
 		</td>
 		<td><a href="aptus://netcom_linphone-desktop" class="button1"><img src="images/phone.svg" class="appicon"><br />Linphone</a>
 		</td>
-		<td><a href="aptus://netcom_loqui" class="button1"><img src="images/irc.svg" class="appicon"><br />Loqui</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_loqui" class="button1"><img src="images/irc.svg" class="appicon"><br />Loqui</a>
+		</td>
 		<td><a href="aptus://netcom_mangler" class="button1"><img src="images/phone.svg" class="appicon"><br />Mangler</a>
 		</td>
 		<td><a href="aptus://netcom_materialgram" class="button1"><img src="images/telegram.svg" class="appicon"><br />Materialgram</a>
@@ -106,10 +108,10 @@ Last update: April 6, 2025 by pavroo
 		</td>
 		<td><a href="aptus://netcom_pidgin" class="button1"><img src="images/im.svg" class="appicon"><br />Pidgin</a>
 		</td>
-		<td><a href="aptus://netcom_psi" class="button1"><img src="images/im.svg" class="appicon"><br />Psi</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_psi" class="button1"><img src="images/im.svg" class="appicon"><br />Psi</a>
+		</td>
 		<td><a href="aptus://netcom_quassel" class="button1"><img src="images/quassel.svg" class="appicon"><br />Quassel</a>
 		</td>
 		<td><a href="aptus://netcom_quaternion" class="button1"><img src="images/im.svg" class="appicon"><br />Quaternion</a>
@@ -120,10 +122,10 @@ Last update: April 6, 2025 by pavroo
 		</td>
 		<td><a href="aptus://netcom_sic" class="button1"><img src="images/irc.svg" class="appicon"><br />sic</a>
 		</td>
-		<td><a href="aptus://netcom_signal-desktop" class="button1"><img src="images/im.svg" class="appicon"><br />Signal Desktop</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_signal-desktop" class="button1"><img src="images/im.svg" class="appicon"><br />Signal Desktop</a>
+		</td>
 		<td><a href="aptus://netcom_teams" class="button1"><img src="images/teams-for-linux.svg" class="appicon"><br />Teams</a>
 		</td>
 		<td><a href="aptus://netcom_teams-for-linux" class="button1"><img src="images/teams-for-linux.svg" class="appicon"><br />Teams for Linux</a>
@@ -134,10 +136,10 @@ Last update: April 6, 2025 by pavroo
 		</td>
 		<td><a href="aptus://netcom_thelounge" class="button1"><img src="images/irc.svg" class="appicon"><br />The Lounge</a>
 		</td>
-		<td><a href="aptus://netcom_tinyirc" class="button1"><img src="images/irc.svg" class="appicon"><br />TinyIRC</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_tinyirc" class="button1"><img src="images/irc.svg" class="appicon"><br />TinyIRC</a>
+		</td>
 		<td><a href="aptus://netcom_tkabber" class="button1"><img src="images/im.svg" class="appicon"><br />Tkabber</a>
 		</td>
 		<td><a href="aptus://netcom_tokodon" class="button1"><img src="images/im.svg" class="appicon"><br />Tokodon</a>
