--- a/8/lib/sparky-aptus-appcenter/accessories-chatbot.html
+++ b/8/lib/sparky-aptus-appcenter/accessories-chatbot.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: March 4, 2024 by pavroo
+Last update: May 4, 2025 by pavroo
 -->
 	<head>
 		<title>Accessories -> Chatbot | APTus AppCenter</title>
@@ -44,9 +44,11 @@ Last update: March 4, 2024 by pavroo
 		</td>
 		<td><a href="aptus://accbot_errbot" class="button1"><img src="images/anbox.svg" class="appicon"><br />Errbot</a>
 		</td>
-		<td><a href="aptus://accbot_imaginer" class="button1"><img src="images/anbox.svg" class="appicon"><br />Imaginer</a>
-		</td>
+		<!--<td><a href="aptus://accbot_imaginer" class="button1"><img src="images/anbox.svg" class="appicon"><br />Imaginer</a>
+		</td>-->
 		<td><a href="aptus://accbot_noi" class="button1"><img src="images/anbox.svg" class="appicon"><br />Noi</a>
+		</td>
+		<td><a href="aptus://accbot_python3-ollama" class="button1"><img src="images/anbox.svg" class="appicon"><br />Ollama</a>
 		</td>
 	</tr>
 </tbody>
