--- a/7/lib/sparky-aptus-appcenter/system-package.html
+++ b/7/lib/sparky-aptus-appcenter/system-package.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: April 29, 2023 by pavroo
+Last update: June 2, 2025 by pavroo
 -->
 	<head>
 		<title>System -> Package Management | APTus AppCenter</title>
@@ -71,6 +71,8 @@ Last update: April 29, 2023 by pavroo
 		<td><a href="aptus://syspac_sparky-aptus-upgrade" class="button1"><img src="images/system-upgrade-full.svg" class="appicon"><br />SparkyAPTus Upgrade</a>
 		</td>
 		<td><a href="aptus://syspac_sparky-aptus-upgrade-checker" class="button1"><img src="images/system-upgrade-full.svg" class="appicon"><br />SparkyAPTus Upgrade Checker</a>
+		</td>
+		<td><a href="aptus://syspac_sparky-package-tool" class="button1"><img src="images/system-upgrade.svg" class="appicon"><br />Sparky Package Tool</a>
 		</td>
 		<td><a href="aptus://syspac_synaptic" class="button1"><img src="images/system-upgrade.svg" class="appicon"><br />Synaptic</a>
 		</td>
