--- a/7/lib/sparky-aptus-appcenter/net-email.html
+++ b/7/lib/sparky-aptus-appcenter/net-email.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: March 6, 2022 by pavroo
+Last update: June 2, 2025 by pavroo
 -->
 	<head>
 		<title>Network -> e-Mail | APTus AppCenter</title>
@@ -70,8 +70,6 @@ Last update: March 6, 2022 by pavroo
 	<tr>
 		<td><a href="aptus://netema_getmail" class="button1"><img src="images/terminal.svg" class="appicon"><br />getmail</a>
 		</td>
-		<td><a href="aptus://netema_gmail-desktop" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Gmail Desktop</a>
-		</td>
 		<td><a href="aptus://netema_gnome-shell-mailnag" class="button1"><img src="images/e-mail.svg" class="appicon"><br />GNOME Shell Mailnag</a>
 		</td>
 		<td><a href="aptus://netema_gnumail.app" class="button1"><img src="images/e-mail.svg" class="appicon"><br />GNU Mail</a>
@@ -80,9 +78,11 @@ Last update: March 6, 2022 by pavroo
 		</td>
 		<td><a href="aptus://netema_mailspring" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Mailspring</a>
 		</td>
+		<td><a href="aptus://netema_mailutils" class="button1"><img src="images/terminal.svg" class="appicon"><br />Mailutils</a>
+		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://netema_mailutils" class="button1"><img src="images/terminal.svg" class="appicon"><br />Mailutils</a>
+		<td><a href="aptus://netema_meru" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Meru</a>
 		</td>
 		<td><a href="aptus://netema_mmh" class="button1"><img src="images/terminal.svg" class="appicon"><br />mmh</a>
 		</td>
