--- a/7/lib/sparky-aptus-appcenter/net-others.html
+++ b/7/lib/sparky-aptus-appcenter/net-others.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: October 8, 2023 by pavroo
+Last update: June 2, 2025 by pavroo
 -->
 	<head>
 		<title>Network -> Others | APTus AppCenter</title>
@@ -64,10 +64,12 @@ Last update: October 8, 2023 by pavroo
 		</td>
 		<td><a href="aptus://netoth_onionshare-cli" class="button1"><img src="images/terminal.svg" class="appicon"><br />OnionShare CLI</a>
 		</td>
-		<td><a href="aptus://netoth_spideroakone" class="button1"><img src="images/network.svg" class="appicon"><br />SpiderOakONE</a>
+		<td><a href="aptus://netoth_speedtest-cli" class="button1"><img src="images/artikulate.svg" class="appicon"><br />Speedtest CLI</a>
 		</td>
 	<tr>
 	</tr>
+		<td><a href="aptus://netoth_spideroakone" class="button1"><img src="images/network.svg" class="appicon"><br />SpiderOakONE</a>
+		</td>
 		<td><a href="aptus://netoth_warpinator" class="button1"><img src="images/network.svg" class="appicon"><br />Warpinator</a>
 		</td>
 		<td><a href="aptus://netoth_wike" class="button1"><img src="images/comix.svg" class="appicon"><br />Wike</a>
