--- a/8/lib/sparky-aptus-appcenter/net-email.html
+++ b/8/lib/sparky-aptus-appcenter/net-email.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: November 5, 2024 by pavroo
+Last update: June 2, 2025 by pavroo
 -->
 	<head>
 		<title>Network -> e-Mail | APTus AppCenter</title>
@@ -64,17 +64,17 @@ Last update: November 5, 2024 by pavroo
 		</td>
 		<td><a href="aptus://netema_getmail" class="button1"><img src="images/terminal.svg" class="appicon"><br />getmail</a>
 		</td>
-		<td><a href="aptus://netema_gmail-desktop" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Gmail Desktop</a>
+		<td><a href="aptus://netema_gnumail.app" class="button1"><img src="images/e-mail.svg" class="appicon"><br />GNU Mail</a>
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://netema_gnumail.app" class="button1"><img src="images/e-mail.svg" class="appicon"><br />GNU Mail</a>
-		</td>
 		<td><a href="aptus://netema_kmail" class="button1"><img src="images/e-mail.svg" class="appicon"><br />KMail</a>
 		</td>
 		<td><a href="aptus://netema_mailspring" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Mailspring</a>
 		</td>
 		<td><a href="aptus://netema_mailutils" class="button1"><img src="images/terminal.svg" class="appicon"><br />Mailutils</a>
+		</td>
+		<td><a href="aptus://netema_meru" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Meru</a>
 		</td>
 		<td><a href="aptus://netema_mutt" class="button1"><img src="images/terminal.svg" class="appicon"><br />Mutt</a>
 		</td>
