--- a/8/lib/sparky-aptus-appcenter/system-virtual.html
+++ b/8/lib/sparky-aptus-appcenter/system-virtual.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: September 16, 2024 by pavroo
+Last update: July 14, 2025 by pavroo
 -->
 	<head>
 		<title>System -> Virtualization | APTus AppCenter</title>
@@ -48,12 +48,14 @@ Last update: September 16, 2024 by pavroo
 		</td>
 		<td><a href="aptus://sysvir_gxemul" class="button1"><img src="images/virt-manager.svg" class="appicon"><br />GXemul</a>
 		</td>
-		<td><a href="aptus://sysvir_default-jre" class="button1"><img src="images/java.svg" class="appicon"><br />Java Runtime (OpenJRE)</a>
+		<td><a href="aptus://sysvir_incus" class="button1"><img src="images/container.svg" class="appicon"><br />Incus</a>
 		</td>
-		<td><a href="aptus://sysvir_qemu-system" class="button1"><img src="images/qemu.svg" class="appicon"><br />QEMU</a>
+		<td><a href="aptus://sysvir_default-jre" class="button1"><img src="images/java.svg" class="appicon"><br />Java Runtime (OpenJRE)</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://sysvir_qemu-system" class="button1"><img src="images/qemu.svg" class="appicon"><br />QEMU</a>
+		</td>
 		<td><a href="aptus://sysvir_qemu-system-gui" class="button1"><img src="images/qemu.svg" class="appicon"><br />QEMU System GUI</a>
 		</td>
 		<td><a href="aptus://sysvir_virtinst" class="button1"><img src="images/terminal.svg" class="appicon"><br />VirtInst</a>
