--- a/8/lib/sparky-aptus-appcenter/accessories-others.html
+++ b/8/lib/sparky-aptus-appcenter/accessories-others.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: August 10, 2024 by pavroo
+Last update: August 12, 2025 by pavroo
 -->
 	<head>
 		<title>Accessories -> Others | APTus AppCenter</title>
@@ -74,18 +74,16 @@ Last update: August 10, 2024 by pavroo
 		</td>
 		<td><a href="aptus://accoth_kdocker" class="button1"><img src="images1/panel.svg" class="appicon"><br />KDocker</a>
 		</td>
-		<td><a href="aptus://accoth_komorebi" class="button1"><img src="images/desktop.svg" class="appicon"><br />Komorebi</a>
-		</td>
+		<!--<td><a href="aptus://accoth_komorebi" class="button1"><img src="images/desktop.svg" class="appicon"><br />Komorebi</a>
+		</td>-->
 		<td><a href="aptus://accoth_kupfer" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Kupfer</a>
 		</td>
-		<td><a href="aptus://accoth_latte-dock" class="button1"><img src="images/dock.svg" class="appicon"><br />Latte Dock</a>
-		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://accoth_light-locker" class="button1"><img src="images/screensaver.svg" class="appicon"><br />Light Locker</a>
 		</td>
 		<td><a href="aptus://accoth_menulibre" class="button1"><img src="images1/alacarte.svg" class="appicon"><br />MenuLibre</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://accoth_nitrogen" class="button1"><img src="images/desktop.svg" class="appicon"><br />Nitrogen</a>
 		</td>
 		<td><a href="aptus://accoth_obconf" class="button1"><img src="images1/obconf.svg" class="appicon"><br />ObConf</a>
@@ -94,12 +92,12 @@ Last update: August 10, 2024 by pavroo
 		</td>
 		<td><a href="aptus://accoth_picom" class="button1"><img src="images/desktop-effects.svg" class="appicon"><br />Picom</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://accoth_plank" class="button1"><img src="images/dock.svg" class="appicon"><br />Plank</a>
 		</td>
 		<td><a href="aptus://accoth_qrencode" class="button1"><img src="images1/qtqr.svg" class="appicon"><br />Qrencode</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://accoth_qt5ct" class="button1"><img src="images/qt.svg" class="appicon"><br />Qt5ct</a>
 		</td>
 		<td><a href="aptus://accoth_qt6ct" class="button1"><img src="images/qt.svg" class="appicon"><br />Qt6ct</a>
@@ -108,12 +106,12 @@ Last update: August 10, 2024 by pavroo
 		</td>
 		<td><a href="aptus://accoth_rofi" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Rofi</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://accoth_sparky-about" class="button1"><img src="images/sparky.svg" class="appicon"><br />Sparky About</a>
 		</td>
 		<td><a href="aptus://accoth_sparky-backlight" class="button1"><img src="images/backlight.svg" class="appicon"><br />Sparky BackLight</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://accoth_sparky-dashboard" class="button1"><img src="images1/alacarte.svg" class="appicon"><br />Sparky Dashboard</a>
 		</td>
 		<td><a href="aptus://accoth_
@@ -123,22 +121,20 @@ Last update: August 10, 2024 by pavroo
 		</td>
 		<td><a href="aptus://accoth_synapse" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Synapse</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://accoth_tint2" class="button1"><img src="images1/panel.svg" class="appicon"><br />Tint2</a>
 		</td>
-		<td><a href="aptus://accoth_ulauncher" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Ulauncher</a>
-		</td>
+		<!--<td><a href="aptus://accoth_ulauncher" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Ulauncher</a>
+		</td>-->
 		<td><a href="aptus://accoth_vala-panel" class="button1"><img src="images1/panel.svg" class="appicon"><br />Vala Panel</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://accoth_wbar" class="button1"><img src="images/dock.svg" class="appicon"><br />Wbar</a>
 		</td>
 		<td><a href="aptus://accoth_webapp-manager" class="button1"><img src="images/web-browser.svg" class="appicon"><br />WebApp Manager</a>
 		</td>
 		<td><a href="aptus://accoth_xscreensaver" class="button1"><img src="images/screensaver.svg" class="appicon"><br />XScreenSaver</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://accoth_zbarcam-qt" class="button1"><img src="images1/qtqr.svg" class="appicon"><br />ZBarcam Qt</a>
 		</td>
 	</tr>
