--- a/8/lib/sparky-aptus-appcenter/games-puzzle.html
+++ b/8/lib/sparky-aptus-appcenter/games-puzzle.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: March 2, 2025 by pavroo
+Last update: August 12, 2025 by pavroo
 -->
 	<head>
 		<title>Games -> Puzzle | APTus AppCenter</title>
@@ -166,8 +166,8 @@ Last update: March 2, 2025 by pavroo
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://gampuz_tworld" class="button1"><img src="images/tetris.svg" class="appicon"><br />Tile World</a>
-		</td>
+		<!--<td><a href="aptus://gampuz_tworld" class="button1"><img src="images/tetris.svg" class="appicon"><br />Tile World</a>
+		</td>-->
 		<td><a href="aptus://gampuz_xbomb" class="button1"><img src="images/gnome-mines.svg" class="appicon"><br />Xbomb</a>
 		</td>
 		<td><a href="aptus://gampuz_xbubble" class="button1"><img src="images/tetris.svg" class="appicon"><br />Xbubble</a>
