--- a/8/lib/sparky-aptus-appcenter/games-rpg.html
+++ b/8/lib/sparky-aptus-appcenter/games-rpg.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: March 2, 2025 by pavroo
+Last update: August 12, 2025 by pavroo
 -->
 	<head>
 		<title>Games -> RPG (Role Playing Game) | APTus AppCenter</title>
@@ -62,16 +62,14 @@ Last update: March 2, 2025 by pavroo
 		</td>
 		<td><a href="aptus://gamrpg_magicmaze" class="button1"><img src="images1/salut.svg" class="appicon"><br />Magicmaze</a>
 		</td>
-		<td><a href="aptus://gamrpg_manaplus" class="button1"><img src="images1/salut.svg" class="appicon"><br />ManaPlus</a>
-		</td>
-		<td><a href="aptus://gamrpg_openmw" class="button1"><img src="images1/salut.svg" class="appicon"><br />OpenMW</a>
-		</td>
-	</tr>
-	<tr>
+		<!--<td><a href="aptus://gamrpg_openmw" class="button1"><img src="images1/salut.svg" class="appicon"><br />OpenMW</a>
+		</td>-->
 		<td><a href="aptus://gamrpg_rolldice" class="button1"><img src="images1/salut.svg" class="appicon"><br />Rolldice</a>
 		</td>
 		<td><a href="aptus://gamrpg_tinymux" class="button1"><img src="images1/salut.svg" class="appicon"><br />TinyMUX</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gamrpg_zangband" class="button1"><img src="images1/salut.svg" class="appicon"><br />Zangband</a>
 		</td>
 	</tr>
