--- a/8/lib/sparky-aptus-appcenter/games-simulation.html
+++ b/8/lib/sparky-aptus-appcenter/games-simulation.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: March 2, 2025 by pavroo
+Last update: August 12, 2025 by pavroo
 -->
 	<head>
 		<title>Games -> Simulation | APTus AppCenter</title>
@@ -46,16 +46,16 @@ Last update: March 2, 2025 by pavroo
 		</td>
 		<td><a href="aptus://gamsim_crrcsim" class="button1"><img src="images1/cloud.svg" class="appicon"><br />Crrcsim</a>
 		</td>
-		<td><a href="aptus://gamsim_endless-sky" class="button1"><img src="images1/rocket.svg" class="appicon"><br />Endless Sky</a>
-		</td>
+		<!--<td><a href="aptus://gamsim_endless-sky" class="button1"><img src="images1/rocket.svg" class="appicon"><br />Endless Sky</a>
+		</td>-->
 		<td><a href="aptus://gamsim_flightgear" class="button1"><img src="images1/cloud.svg" class="appicon"><br />FlightGear Simulator</a>
 		</td>
 		<td><a href="aptus://gamsim_golly" class="button1"><img src="images/figma.svg" class="appicon"><br />Golly</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gamsim_lincity-ng" class="button1"><img src="images/figma.svg" class="appicon"><br />LinCity-NG</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gamsim_openttd" class="button1"><img src="images/figma.svg" class="appicon"><br />OpenTTD</a>
 		</td>
 		<td><a href="aptus://gamsim_pmars" class="button1"><img src="images/figma.svg" class="appicon"><br />Portable MARS</a>
@@ -66,10 +66,10 @@ Last update: March 2, 2025 by pavroo
 		</td>
 		<td><a href="aptus://gamsim_simutrans" class="button1"><img src="images/figma.svg" class="appicon"><br />Simutrans</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gamsim_stormbaancoureur" class="button1"><img src="images1/setrouble.svg" class="appicon"><br />Storm baancoureur</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gamsim_torcs" class="button1"><img src="images1/setrouble.svg" class="appicon"><br />TORCS</a>
 		</td>
 	</tr>
