--- a/8/lib/sparky-aptus-appcenter/system-encrypt.html
+++ b/8/lib/sparky-aptus-appcenter/system-encrypt.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 1, 2024 by pavroo
+Last update: August 12, 2025 by pavroo
 -->
 	<head>
 		<title>System -> Encrypt | APTus AppCenter</title>
@@ -58,13 +58,13 @@ Last update: June 1, 2024 by pavroo
 		</td>
 		<td><a href="aptus://sysenc_veracrypt-console" class="button1"><img src="images/keyring.svg" class="appicon"><br />VeraCrypt console</a>
 		</td>
-		<td><a href="aptus://sysenc_zulucrypt-cli" class="button1"><img src="images/terminal.svg" class="appicon"><br />Zulucrypt CLI</a>
+		<!--<td><a href="aptus://sysenc_zulucrypt-cli" class="button1"><img src="images/terminal.svg" class="appicon"><br />Zulucrypt CLI</a>
 		</td>
 		<td><a href="aptus://sysenc_zulucrypt-gui" class="button1"><img src="images/keyring.svg" class="appicon"><br />Zulucrypt GUI</a>
 		</td>
 		<td><a href="aptus://sysenc_zulumount-cli" class="button1"><img src="images/terminal.svg" class="appicon"><br />Zulumount CLI</a>
 		</td>
-		<td><a href="aptus://sysenc_zulumount-gui" class="button1"><img src="images/keyring.svg" class="appicon"><br />Zulumount GUI</a>
+		<td><a href="aptus://sysenc_zulumount-gui" class="button1"><img src="images/keyring.svg" class="appicon"><br />Zulumount GUI</a>-->
 		</td>
 		<td>
 	</tr>
