--- a/7/lib/sparky-aptus-appcenter/net-email.html
+++ b/7/lib/sparky-aptus-appcenter/net-email.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 2, 2025 by pavroo
+Last update: August 12, 2025 by pavroo
 -->
 	<head>
 		<title>Network -> e-Mail | APTus AppCenter</title>
@@ -50,10 +50,12 @@ Last update: June 2, 2025 by pavroo
 		</td>
 		<td><a href="aptus://netema_balsa" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Balsa</a>
 		</td>
-		<td><a href="aptus://netema_bsd-mailx" class="button1"><img src="images/terminal.svg" class="appicon"><br />BSD Mailx</a>
+		<td><a href="aptus://netema_birdtray" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Birdtray</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netema_bsd-mailx" class="button1"><img src="images/terminal.svg" class="appicon"><br />BSD Mailx</a>
+		</td>
 		<td><a href="aptus://netema_citadel-client" class="button1"><img src="images/terminal.svg" class="appicon"><br />Citadel client</a>
 		</td>
 		<td><a href="aptus://netema_claws-mail" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Claws-Mail</a>
@@ -64,10 +66,10 @@ Last update: June 2, 2025 by pavroo
 		</td>
 		<td><a href="aptus://netema_fetchmail" class="button1"><img src="images/terminal.svg" class="appicon"><br />fetchmail</a>
 		</td>
-		<td><a href="aptus://netema_geary" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Geary</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netema_geary" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Geary</a>
+		</td>
 		<td><a href="aptus://netema_getmail" class="button1"><img src="images/terminal.svg" class="appicon"><br />getmail</a>
 		</td>
 		<td><a href="aptus://netema_gnome-shell-mailnag" class="button1"><img src="images/e-mail.svg" class="appicon"><br />GNOME Shell Mailnag</a>
@@ -78,10 +80,10 @@ Last update: June 2, 2025 by pavroo
 		</td>
 		<td><a href="aptus://netema_mailspring" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Mailspring</a>
 		</td>
-		<td><a href="aptus://netema_mailutils" class="button1"><img src="images/terminal.svg" class="appicon"><br />Mailutils</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netema_mailutils" class="button1"><img src="images/terminal.svg" class="appicon"><br />Mailutils</a>
+		</td>
 		<td><a href="aptus://netema_meru" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Meru</a>
 		</td>
 		<td><a href="aptus://netema_mmh" class="button1"><img src="images/terminal.svg" class="appicon"><br />mmh</a>
@@ -92,10 +94,10 @@ Last update: June 2, 2025 by pavroo
 		</td>
 		<td><a href="aptus://netema_nmh" class="button1"><img src="images/terminal.svg" class="appicon"><br />nmh</a>
 		</td>
-		<td><a href="aptus://netema_notmuch" class="button1"><img src="images/terminal.svg" class="appicon"><br />Notmuch</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netema_notmuch" class="button1"><img src="images/terminal.svg" class="appicon"><br />Notmuch</a>
+		</td>
 		<td><a href="aptus://netema_procmail" class="button1"><img src="images/terminal.svg" class="appicon"><br />Procmail</a>
 		</td>
 		<td><a href="aptus://netema_protonmail-bridge" class="button1"><img src="images/terminal.svg" class="appicon"><br />ProtonMail Bridge</a>
@@ -106,6 +108,8 @@ Last update: June 2, 2025 by pavroo
 		</td>
 		<td><a href="aptus://netema_thunderbird" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Thunderbird</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netema_tutanota-desktop" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Tutanota Desktop</a>
 		</td>
 	</tr>
