--- a/8/lib/sparky-aptus-appcenter/games-text.html
+++ b/8/lib/sparky-aptus-appcenter/games-text.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: August 10, 2024 by pavroo
+Last update: August 12, 2025 by pavroo
 -->
 	<head>
 		<title>Games -> Text | APTus AppCenter</title>
@@ -84,8 +84,8 @@ Last update: August 10, 2024 by pavroo
 	<tr>
 		<td><a href="aptus://gamtex_nudoku" class="button1"><img src="images/sudoku.svg" class="appicon"><br />Nudoku</a>
 		</td>
-		<td><a href="aptus://gamtex_open-adventure" class="button1"><img src="images/terminal.svg" class="appicon"><br />Open Adventure</a>
-		</td>
+		<!--<td><a href="aptus://gamtex_open-adventure" class="button1"><img src="images/terminal.svg" class="appicon"><br />Open Adventure</a>
+		</td>-->
 		<td><a href="aptus://gamtex_pacvim" class="button1"><img src="images1/pacman.svg" class="appicon"><br />PacVim</a>
 		</td>
 		<td><a href="aptus://gamtex_petris" class="button1"><img src="images/tetris.svg" class="appicon"><br />Petris</a>
@@ -94,10 +94,10 @@ Last update: August 10, 2024 by pavroo
 		</td>
 		<td><a href="aptus://gamtex_sudoku" class="button1"><img src="images/sudoku.svg" class="appicon"><br />Sudoku</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gamtex_tint" class="button1"><img src="images/tetris.svg" class="appicon"><br />TINT</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gamtex_tintin++" class="button1"><img src="images/terminal.svg" class="appicon"><br />Tintin++</a>
 		</td>
 		<td><a href="aptus://gamtex_vitetris" class="button1"><img src="images/tetris.svg" class="appicon"><br />Vitetris</a>
