--- a/8/lib/sparky-aptus-appcenter/media-videotools.html
+++ b/8/lib/sparky-aptus-appcenter/media-videotools.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: April 4, 2024 by pavroo
+Last update: August 12, 2025 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Video Tools | APTus AppCenter</title>
@@ -78,14 +78,14 @@ Last update: April 4, 2024 by pavroo
 		</td>
 		<td><a href="aptus://videdi_obs-studio" class="button1"><img src="images/smtube.svg" class="appicon"><br />OBS Studio</a>
 		</td>
-		<td><a href="aptus://videdi_olive-editor" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Olive Editor</a>
-		</td>
+		<!--<td><a href="aptus://videdi_olive-editor" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Olive Editor</a>
+		</td>-->
 		<td><a href="aptus://videdi_onionmediax" class="button1"><img src="images/kdenlive.svg" class="appicon"><br />OnionMedia X</a>
+		</td>
+		<td><a href="aptus://videdi_openshot-qt" class="button1"><img src="images/avidemux.svg" class="appicon"><br />OpenShot-Qt</a>
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://videdi_openshot-qt" class="button1"><img src="images/avidemux.svg" class="appicon"><br />OpenShot-Qt</a>
-		</td>
 		<td><a href="aptus://videdi_pitivi" class="button1"><img src="images/avidemux.svg" class="appicon"><br />PiTiVi</a>
 		</td>
 		<td><a href="aptus://videdi_shorten" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Shorten</a>
@@ -96,10 +96,10 @@ Last update: April 4, 2024 by pavroo
 		</td>
 		<td><a href="aptus://videdi_slowmovideo" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Slowmovideo</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://videdi_sparky-tube" class="button1"><img src="images0/sparky-tube.svg" class="appicon"><br />Sparky Tube</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://videdi_stopmotion" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Stopmotion</a>
 		</td>
 		<td><a href="aptus://videdi_vcdimager" class="button1"><img src="images/devede.svg" class="appicon"><br />VCDImager</a>
@@ -110,15 +110,13 @@ Last update: April 4, 2024 by pavroo
 		</td>
 		<td><a href="aptus://videdi_vqmt" class="button1"><img src="images/avidemux.svg" class="appicon"><br />VQMT</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://videdi_winff" class="button1"><img src="images/avidemux.svg" class="appicon"><br />WinFF</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://videdi_xjadeo" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Xjadeo</a>
 		</td>
 		<td><a href="aptus://videdi_youtube-dl" class="button1"><img src="images/youtube.svg" class="appicon"><br />YouTube-DL</a>
-		</td>
-		<td><a href="aptus://videdi_youtube-dl-gui" class="button1"><img src="images/youtube.svg" class="appicon"><br />YouTube DL GUI</a>
 		</td>
 		<td><a href="aptus://videdi_youtubedl-gui" class="button1"><img src="images/youtube.svg" class="appicon"><br />YouTubeDL GUI</a>
 		</td>
