--- a/8/lib/sparky-aptus-appcenter/net-email.html
+++ b/8/lib/sparky-aptus-appcenter/net-email.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 2, 2025 by pavroo
+Last update: August 12, 2025 by pavroo
 -->
 	<head>
 		<title>Network -> e-Mail | APTus AppCenter</title>
@@ -48,12 +48,14 @@ Last update: June 2, 2025 by pavroo
 		</td>
 		<td><a href="aptus://netema_balsa" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Balsa</a>
 		</td>
-		<td><a href="aptus://netema_bsd-mailx" class="button1"><img src="images/terminal.svg" class="appicon"><br />BSD Mailx</a>
+		<td><a href="aptus://netema_birdtray" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Birdtray</a>
 		</td>
-		<td><a href="aptus://netema_citadel-client" class="button1"><img src="images/terminal.svg" class="appicon"><br />Citadel client</a>
+		<td><a href="aptus://netema_bsd-mailx" class="button1"><img src="images/terminal.svg" class="appicon"><br />BSD Mailx</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netema_citadel-client" class="button1"><img src="images/terminal.svg" class="appicon"><br />Citadel client</a>
+		</td>
 		<td><a href="aptus://netema_claws-mail" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Claws-Mail</a>
 		</td>
 		<td><a href="aptus://netema_evolution" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Evolution</a>
@@ -64,10 +66,10 @@ Last update: June 2, 2025 by pavroo
 		</td>
 		<td><a href="aptus://netema_getmail" class="button1"><img src="images/terminal.svg" class="appicon"><br />getmail</a>
 		</td>
-		<td><a href="aptus://netema_gnumail.app" class="button1"><img src="images/e-mail.svg" class="appicon"><br />GNU Mail</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netema_gnumail.app" class="button1"><img src="images/e-mail.svg" class="appicon"><br />GNU Mail</a>
+		</td>
 		<td><a href="aptus://netema_kmail" class="button1"><img src="images/e-mail.svg" class="appicon"><br />KMail</a>
 		</td>
 		<td><a href="aptus://netema_mailspring" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Mailspring</a>
@@ -78,10 +80,10 @@ Last update: June 2, 2025 by pavroo
 		</td>
 		<td><a href="aptus://netema_mutt" class="button1"><img src="images/terminal.svg" class="appicon"><br />Mutt</a>
 		</td>
-		<td><a href="aptus://netema_neomutt" class="button1"><img src="images/terminal.svg" class="appicon"><br />Neomutt</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netema_neomutt" class="button1"><img src="images/terminal.svg" class="appicon"><br />Neomutt</a>
+		</td>
 		<td><a href="aptus://netema_nmh" class="button1"><img src="images/terminal.svg" class="appicon"><br />nmh</a>
 		</td>
 		<td><a href="aptus://netema_notmuch" class="button1"><img src="images/terminal.svg" class="appicon"><br />Notmuch</a>
@@ -92,10 +94,10 @@ Last update: June 2, 2025 by pavroo
 		</td>
 		<td><a href="aptus://netema_ roundcube-core" class="button1"><img src="images/web-browser.svg" class="appicon"><br />RoundCube Webmail</a>
 		</td>
-		<td><a href="aptus://netema_sylpheed" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Sylpheed</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netema_sylpheed" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Sylpheed</a>
+		</td>
 		<td><a href="aptus://netema_thunderbird" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Thunderbird</a>
 		</td>
 		<td><a href="aptus://netema_tutanota-desktop" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Tutanota Desktop</a>
